<resources>
    <string name="app_name">DogsApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="content_description_circle_photo">random dog photo</string>
    <string name="welcome_message">We are glad that you like dogs!</string>
    <string name="example_quote">Every time you are tempted to react in the same old way, ask if you want to be a prisoner of the past or a pioneer of the future.</string>
    <string name="breedsText">List of breeds</string>
    <string name="quotesList">List of quotes</string>
    <string name="dogs_image">Dogs image</string>
    <string name="testQuote">“Success generally comes after you start. If you think success comes before you start, the world probably looks confusing to you. “</string>
    <string name="example_author">-Scoot Adams</string>
    <string name="delete_quotes_string">Delete locally saved quotes.</string>
    <string name="change_theme_string">Change theme of your app.</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="configure">Configure</string>
</resources>