<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="startFragment"
            type="com.example.dogsapp.ui.start.StartFragment" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/start"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.start.StartFragment">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/photoCircle"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_marginTop="16dp"
            android:elevation="8dp"
            android:src="@drawable/index"
            app:cardCornerRadius="280dp"
            app:layout_constraintBottom_toTopOf="@+id/welcomeMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/welcomeMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="8dp"
            android:text="@string/welcome_message"
            android:textSize="40sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintBottom_toTopOf="@id/quote"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/photoCircle" />

        <TextView
            android:id="@+id/quote"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="32dp"
            android:text="@string/example_quote"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="italic"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeMessage" />

        <LinearLayout
            android:id="@+id/cardLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/quote">

            <androidx.cardview.widget.CardView
                android:id="@+id/dogCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:clickable="true"
                android:elevation="64dp"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{() ->startFragment.navigateToBreeds() }"
                app:cardCornerRadius="8dp"
                app:cardElevation="10dp"
                tools:ignore="SpeakableTextPresentCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/breedsPhoto"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:elevation="16dp"
                        android:src="@drawable/index"
                        app:cardCornerRadius="280dp"
                        app:layout_constraintBottom_toTopOf="@id/breedsText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/breedsText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/breedsText"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/breedsPhoto" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/quoteCard"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginVertical="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:onClick="@{() ->startFragment.navigateToBreeds() }"
                app:cardCornerRadius="8dp"
                app:cardElevation="16dp"
                tools:ignore="SpeakableTextPresentCheck">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/quotePhoto"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="16dp"
                        android:background="@null"
                        android:src="@drawable/bubble"
                        app:layout_constraintBottom_toTopOf="@id/quoteText"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="SpeakableTextPresentCheck"
                        android:contentDescription="@string/content_description_circle_photo" />

                    <TextView
                        android:id="@+id/quoteText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quotesList"
                        android:textSize="24sp"
                        android:textStyle="bold"
                        android:typeface="serif"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/quotePhoto" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>